--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -65,7 +65,7 @@ body {
     .pagination {
         margin-right: 5px;
     }
-    
+
     .products-list {
         padding: 0 15px;
         .product-item {
@@ -122,5 +122,12 @@ body {
                 }
             }
         }
+    }
+
+    /*搜索*/
+    .search-form {
+        padding: 0 5px 10px;
+        margin-bottom: 10px;
+        border-bottom: 1px solid #eee;
     }
 }
