--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,10 +1,8 @@
 @import "~@fortawesome/fontawesome-free/css/all.css";
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
@@ -62,7 +60,7 @@ body {
 }
 
 /*商品列表页*/
-.products-index-page,.products-favorites-page {
+.products-index-page, .products-favorites-page {
     .pagination {
         margin-right: 5px;
     }
@@ -111,7 +109,7 @@ body {
                         color: #38b;
                         font-weight: bold;
                     }
-                    &>div {
+                    & > div {
                         &:first-child {
                             border-right: 1px solid #eee;
                         }
@@ -126,10 +124,53 @@ body {
     }
 
     /*搜索*/
+    // 替换原有的 .search-form
     .search-form {
         padding: 0 5px 10px;
+        .category-breadcrumb {
+            line-height: 28px;
+        }
+        .all-products {
+            font-size: 12px;
+            color: #666;
+            text-decoration: none;
+        }
+        .category {
+            font-size: 12px;
+            height: 22px;
+            border: 1px solid #eee;
+            padding: 4px;
+            color: #666;
+            a {
+                text-decoration: none;
+                color: #666;
+            }
+        }
+    }
+    .filters {
+        font-size: 12px;
         margin-bottom: 10px;
-        border-bottom: 1px solid #eee;
+        & > .row {
+            border-top: 1px solid #eee;
+            border-bottom: 1px solid #eee;
+            margin: 0 -20px;
+            .filter-key {
+                width: 150px;
+                padding-top: 5px;
+                padding-bottom: 5px;
+                background: #f3f3f3;
+                color: #666;
+            }
+            .filter-values {
+                padding-top: 5px;
+                padding-bottom: 5px;
+                a {
+                    margin-right: 50px;
+                    color: #666;
+                    text-decoration: none;
+                }
+            }
+        }
     }
 }
 
@@ -178,8 +219,8 @@ body {
         display: flex;
         flex-direction: row;
         font-size: 12px;
-        &>div {
-            &.sold_count,&.review_count {
+        & > div {
+            &.sold_count, &.review_count {
                 border-right: 1px dotted #c9c9c9;
             }
             width: 33%;
@@ -192,7 +233,7 @@ body {
         }
     }
     .skus {
-        &>label {
+        & > label {
             color: #999;
             font-size: 12px;
             padding: 0 10px 0 10px;
@@ -242,7 +283,7 @@ body {
         padding-left: 44px;
     }
 
-    .product-detail  {
+    .product-detail {
         .nav.nav-tabs > li > a {
             border-radius: 0 !important;
         }
@@ -402,7 +443,7 @@ body {
     }
     .order-summary {
         width: 50%;
-        font-family: Verdana,Tahoma,Helvetica,Arial;
+        font-family: Verdana, Tahoma, Helvetica, Arial;
         .total-amount {
             font-weight: bolder;
             font-size: 14px;
@@ -466,7 +507,7 @@ body {
             & > input {
                 position: absolute;
                 top: -9999px;
-                clip: rect(0,0,0,0);
+                clip: rect(0, 0, 0, 0);
             }
             & > label {
                 float: right;
