--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -36,6 +36,35 @@ body {
     margin-bottom: 60px;
 }
 
+/*下拉菜单*/
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu a::after {
+    transform: rotate(-90deg);
+    position: absolute;
+    right: 3px;
+    top: 40%;
+}
+
+.dropdown-submenu:hover > .dropdown-menu, .dropdown-submenu:focus > .dropdown-menu {
+    display: flex;
+    flex-direction: column;
+    position: absolute !important;
+    margin-top: -30px;
+    left: 100%;
+}
+
+@media (max-width: 992px) {
+    .dropdown-menu {
+        width: 50%;
+    }
+    .dropdown-menu .dropdown-submenu {
+        width: auto;
+    }
+}
+
 .footer {
     position: absolute;
     bottom: 0;
@@ -545,3 +574,4 @@ body {
         border-radius: 0px;
     }
 }
+
