--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,74 +1,42 @@
-@import "~@fortawesome/fontawesome-free/css/all.css";
+
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+
 // Variables
-@import 'variables';
+@import "variables";
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-/* universal */
-
+// 通用样式
 body {
-    font-family: Hiragino Sans GB, "Hiragino Sans GB", Helvetica, "Microsoft YaHei", Arial, sans-serif;
-    font-size: 14px;
+    font-family: Hiragino Sans GB, "Hiragino Sans GB", Helvetica, "Microsoft YaHei", Arial,sans-serif;
 }
 
-/* header */
+/* 顶部导航 */
 
 .navbar-static-top {
     border-color: #e7e7e7;
     background-color: #fff;
     box-shadow: 0px 1px 11px 2px rgba(42, 42, 42, 0.1);
     border-top: 4px solid #00b5ad;
-    border-bottom: 1px solid #e8e8e8;
     margin-bottom: 40px;
     margin-top: 0px;
 }
 
-/* Sticky footer styles */
+/* 底部样式 */
 html {
     position: relative;
-    min-height: 100%;
+    min-height: 100% ;
 }
-
 body {
-    /* Margin bottom by footer height */
     margin-bottom: 60px;
-}
-
-/*下拉菜单*/
-.dropdown-submenu {
-    position: relative;
-}
-
-.dropdown-submenu a::after {
-    transform: rotate(-90deg);
-    position: absolute;
-    right: 3px;
-    top: 40%;
-}
-
-.dropdown-submenu:hover > .dropdown-menu, .dropdown-submenu:focus > .dropdown-menu {
-    display: flex;
-    flex-direction: column;
-    position: absolute !important;
-    margin-top: -30px;
-    left: 100%;
-}
-
-@media (max-width: 992px) {
-    .dropdown-menu {
-        width: 50%;
-    }
-    .dropdown-menu .dropdown-submenu {
-        width: auto;
-    }
 }
 
 .footer {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 100% ;
     /* Set the fixed height of the footer here */
     height: 60px;
     background-color: #000;
@@ -88,12 +56,7 @@ body {
     }
 }
 
-/*商品列表页*/
-.products-index-page, .products-favorites-page {
-    .pagination {
-        margin-right: 5px;
-    }
-
+@mixin product-list {
     .products-list {
         padding: 0 15px;
         .product-item {
@@ -138,7 +101,7 @@ body {
                         color: #38b;
                         font-weight: bold;
                     }
-                    & > div {
+                    &>div {
                         &:first-child {
                             border-right: 1px solid #eee;
                         }
@@ -151,14 +114,17 @@ body {
             }
         }
     }
+}
 
-    /*搜索*/
+.products-index-page, .products-favorites-page {
+    .pagination {
+        margin-right: 5px;
+    }
+    @include product-list;
     // 替换原有的 .search-form
     .search-form {
-        padding: 0 5px 10px;
-        .category-breadcrumb {
-            line-height: 28px;
-        }
+        padding: 0 20px 10px;
+        border-bottom: 1px solid #eee;
         .all-products {
             font-size: 12px;
             color: #666;
@@ -194,10 +160,8 @@ body {
     .filters {
         font-size: 12px;
         margin-bottom: 10px;
-        & > .row {
-            border-top: 1px solid #eee;
+        &>.row {
             border-bottom: 1px solid #eee;
-            margin: 0 -20px;
             .filter-key {
                 width: 150px;
                 padding-top: 5px;
@@ -216,9 +180,9 @@ body {
             }
         }
     }
+
 }
 
-/*商品详情页*/
 .products-show-page {
     .cover {
         width: 100%;
@@ -226,7 +190,7 @@ body {
         padding: 30px 0;
     }
     .title {
-        font-size: 24px;
+        font-size: 16px;
         font-weight: bold;
         margin-bottom: 10px;
     }
@@ -263,8 +227,8 @@ body {
         display: flex;
         flex-direction: row;
         font-size: 12px;
-        & > div {
-            &.sold_count, &.review_count {
+        &>div {
+            &.sold_count,&.review_count {
                 border-right: 1px dotted #c9c9c9;
             }
             width: 33%;
@@ -277,7 +241,7 @@ body {
         }
     }
     .skus {
-        & > label {
+        &>label {
             color: #999;
             font-size: 12px;
             padding: 0 10px 0 10px;
@@ -290,10 +254,7 @@ body {
                 padding: 2px 5px;
                 font-size: 12px;
             }
-            .btn {
-                border: 1px solid #ccc;
-            }
-            .btn.active, .btn:hover {
+            .btn-default.active, .btn-default:hover {
                 margin-top: 0px !important;
                 background: #fff !important;
                 border: 2px solid red !important;
@@ -327,7 +288,7 @@ body {
         padding-left: 44px;
     }
 
-    .product-detail {
+    .product-detail  {
         .nav.nav-tabs > li > a {
             border-radius: 0 !important;
         }
@@ -337,6 +298,7 @@ body {
             padding: 20px;
         }
     }
+
     .crowdfunding-info {
         margin-bottom: 20px;
         font-size: 14px;
@@ -364,6 +326,7 @@ body {
             color: red;
         }
     }
+
     .properties-list {
         border-bottom: 1px solid #e6e6e6;
         margin-bottom: 20px;
@@ -387,9 +350,18 @@ body {
     .product-description img {
         max-width: 100%;
     }
+
+    .similar-products {
+        @include product-list;
+        .title {
+            font-weight: normal;
+        }
+        .price {
+            background-color: unset;
+        }
+    }
 }
 
-/*购物车中心*/
 .cart-index-page {
     .product_list {
         .preview {
@@ -436,7 +408,6 @@ body {
     }
 }
 
-/*订单页*/
 .orders-index-page {
     .list-group-item {
         font-size: 12px;
@@ -445,7 +416,7 @@ body {
         margin-bottom: 15px;
         .panel {
             margin: 0;
-            .card-body {
+            .panel-body {
                 padding: 0;
             }
         }
@@ -482,7 +453,6 @@ body {
     }
 }
 
-/*订单详情页*/
 .orders-show-page {
     font-size: 12px;
     .vertical-middle {
@@ -537,7 +507,7 @@ body {
     }
     .order-summary {
         width: 50%;
-        font-family: Verdana, Tahoma, Helvetica, Arial;
+        font-family: Verdana,Tahoma,Helvetica,Arial;
         .total-amount {
             font-weight: bolder;
             font-size: 14px;
@@ -548,17 +518,12 @@ body {
             padding-right: 20px;
         }
     }
-    .payment-buttons {
-        margin-top: 10px;
-        padding-right: 10px;
-    }
     .payment-buttons, .receive-button, .refund-button {
         margin-top: 10px;
         padding-right: 10px;
     }
 }
 
-/*订单评价页*/
 .orders-review-show-page {
     .vertical-middle {
         vertical-align: middle;
@@ -601,7 +566,7 @@ body {
             & > input {
                 position: absolute;
                 top: -9999px;
-                clip: rect(0, 0, 0, 0);
+                clip: rect(0,0,0,0);
             }
             & > label {
                 float: right;
@@ -640,7 +605,44 @@ body {
     }
 }
 
-/*分期付款*/
+.dropdown-submenu {
+    position: relative;
+    & > .dropdown-menu {
+        top: 0;
+        left: 100%;
+        margin-top: -6px;
+        margin-left: -1px;
+        border-radius: 0 6px 6px 6px;
+    }
+    &:hover > .dropdown-menu {
+        display: block;
+    }
+    & > a:after {
+        display: block;
+        content: " ";
+        float: right;
+        width: 0;
+        height: 0;
+        border-color: transparent;
+        border-style: solid;
+        border-width: 5px 0 5px 5px;
+        border-left-color: #ccc;
+        margin-top: 5px;
+        margin-right: -10px;
+    }
+    &:hover > a:after {
+        border-left-color: #fff;
+    }
+    &.pull-left {
+        float: none;
+        & > .dropdown-menu {
+            left: -100%;
+            margin-left: 10px;
+            border-radius: 6px 0 6px 6px;
+        }
+    }
+}
+
 .installments-show-page {
     font-size: 12px;
     .table {
@@ -699,4 +701,3 @@ body {
         padding-right: 10px;
     }
 }
-
